parser.out
Grammar:

Rule 0     S' -> initial
Rule 1     initial -> ALGORITMO CARACTERE VAR declaracaoType INICIO blocoType FIMALGORITMO
Rule 2     blocoType -> <empty>
Rule 3     blocoType -> bloco
Rule 4     declaracaoType -> <empty>
Rule 5     declaracaoType -> declaracaoTypeAux
Rule 6     declaracaoTypeAux -> declaracao
Rule 7     declaracaoTypeAux -> declaracao declaracaoTypeAux
Rule 8     declaracao -> vartype : LOGICO
Rule 9     declaracao -> vartype : CARACTERE
Rule 10    declaracao -> vartype : REAL
Rule 11    declaracao -> vartype : INTEIRO
Rule 12    vartype -> ID , vartype
Rule 13    vartype -> ID
Rule 14    bloco -> cmd bloco
Rule 15    bloco -> cmd
Rule 16    cmd -> cmdRepeticao
Rule 17    cmd -> LIMPATELA
Rule 18    cmd -> cmdCondicao
Rule 19    cmd -> cmdleitura
Rule 20    cmd -> cmdescrita
Rule 21    cmd -> cmdattrib
Rule 22    cmdRepeticao -> ENQUANTO expressaoRelacional FACA bloco FIMENQUANTO
Rule 23    cmdleitura -> LEIA ( ID )
Rule 24    cmdCondicao -> SE expressaoRelacional ENTAO bloco SENAO bloco FIMSE
Rule 25    cmdCondicao -> SE expressaoRelacional ENTAO bloco FIMSE
Rule 26    expressaoRelacional -> termoRelacional
Rule 27    expressaoRelacional -> expressaoRelacional OP_BOOL termoRelacional
Rule 28    termoRelacional -> ( expressaoRelacional )
Rule 29    termoRelacional -> FALSO
Rule 30    termoRelacional -> VERDADEIRO
Rule 31    termoRelacional -> NAO termoRelacional
Rule 32    termoRelacional -> expr OP_REL expr
Rule 33    OP_BOOL -> XOU
Rule 34    OP_BOOL -> OU
Rule 35    OP_BOOL -> E
Rule 36    OP_REL -> EQ  [precedence=nonassoc, level=1]
Rule 37    OP_REL -> GT  [precedence=nonassoc, level=1]
Rule 38    OP_REL -> GE  [precedence=nonassoc, level=1]
Rule 39    OP_REL -> LT  [precedence=nonassoc, level=1]
Rule 40    OP_REL -> LE  [precedence=nonassoc, level=1]
Rule 41    OP_REL -> NE  [precedence=nonassoc, level=1]
Rule 42    cmdattrib -> ID ASSIGN ( typeArgs )
Rule 43    cmdattrib -> ID ASSIGN typeArgs
Rule 44    cmdattrib -> ID ASSIGN expr
Rule 45    typeArgs -> CARACTERE
Rule 46    typeArgs -> FALSO
Rule 47    typeArgs -> VERDADEIRO
Rule 48    cmdescrita -> ESCREVAL ( )
Rule 49    cmdescrita -> ESCREVAL ( typeArgsEscrita )
Rule 50    cmdescrita -> ESCREVA ( )
Rule 51    cmdescrita -> ESCREVA ( typeArgsEscrita )
Rule 52    typeArgsEscritaAux -> typeArgs
Rule 53    typeArgsEscritaAux -> expr
Rule 54    typeArgsEscrita -> typeArgsEscritaAux
Rule 55    typeArgsEscrita -> typeArgsEscrita , typeArgsEscritaAux
Rule 56    expr -> ID
Rule 57    expr -> REAL
Rule 58    expr -> INTEIRO
Rule 59    expr -> - expr  [precedence=right, level=5]
Rule 60    expr -> expr ^ expr  [precedence=right, level=4]
Rule 61    expr -> expr MOD expr  [precedence=left, level=3]
Rule 62    expr -> expr % expr  [precedence=left, level=3]
Rule 63    expr -> expr \ expr  [precedence=left, level=3]
Rule 64    expr -> expr / expr  [precedence=left, level=3]
Rule 65    expr -> expr * expr  [precedence=left, level=3]
Rule 66    expr -> expr - expr  [precedence=left, level=2]
Rule 67    expr -> expr + expr  [precedence=left, level=2]
Rule 68    expr -> ( expr )

Unused terminals:

    PROCEDIMENTO
    FIMESCOLHA
    REPITA
    ECO
    FIMPROCEDIMENTO
    POS
    TIMER
    ASC
    FIMFUNCAO
    VETOR
    ESCOLHA
    FIMREPITA
    CARAC
    FUNCAO
    CRONOMETRO
    RETORNE

Terminals, with rules where they appear:

%                    : 62
(                    : 23 28 42 48 49 50 51 68
)                    : 23 28 42 48 49 50 51 68
*                    : 65
+                    : 67
,                    : 12 55
-                    : 59 66
/                    : 64
:                    : 8 9 10 11
ALGORITMO            : 1
ASC                  : 
ASSIGN               : 42 43 44
CARAC                : 
CARACTERE            : 1 9 45
CRONOMETRO           : 
E                    : 35
ECO                  : 
ENQUANTO             : 22
ENTAO                : 24 25
EQ                   : 36
ESCOLHA              : 
ESCREVA              : 50 51
ESCREVAL             : 48 49
FACA                 : 22
FALSO                : 29 46
FIMALGORITMO         : 1
FIMENQUANTO          : 22
FIMESCOLHA           : 
FIMFUNCAO            : 
FIMPROCEDIMENTO      : 
FIMREPITA            : 
FIMSE                : 24 25
FUNCAO               : 
GE                   : 38
GT                   : 37
ID                   : 12 13 23 42 43 44 56
INICIO               : 1
INTEIRO              : 11 58
LE                   : 40
LEIA                 : 23
LIMPATELA            : 17
LOGICO               : 8
LT                   : 39
MOD                  : 61
NAO                  : 31
NE                   : 41
OU                   : 34
POS                  : 
PROCEDIMENTO         : 
REAL                 : 10 57
REPITA               : 
RETORNE              : 
SE                   : 24 25
SENAO                : 24
TIMER                : 
VAR                  : 1
VERDADEIRO           : 30 47
VETOR                : 
XOU                  : 33
\                    : 63
^                    : 60
error                : 

Nonterminals, with rules where they appear:

OP_BOOL              : 27
OP_REL               : 32
bloco                : 3 14 22 24 24 25
blocoType            : 1
cmd                  : 14 15
cmdCondicao          : 18
cmdRepeticao         : 16
cmdattrib            : 21
cmdescrita           : 20
cmdleitura           : 19
declaracao           : 6 7
declaracaoType       : 1
declaracaoTypeAux    : 5 7
expr                 : 32 32 44 53 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68
expressaoRelacional  : 22 24 25 27 28
initial              : 0
termoRelacional      : 26 27 31
typeArgs             : 42 43 52
typeArgsEscrita      : 49 51 55
typeArgsEscritaAux   : 54 55
vartype              : 8 9 10 11 12


state 0

    (0) S' -> . initial
    (1) initial -> . ALGORITMO CARACTERE VAR declaracaoType INICIO blocoType FIMALGORITMO
    ALGORITMO       shift and go to state 2

    initial                        shift and go to state 1

state 1

    (0) S' -> initial .


state 2

    (1) initial -> ALGORITMO . CARACTERE VAR declaracaoType INICIO blocoType FIMALGORITMO
    CARACTERE       shift and go to state 3


state 3

    (1) initial -> ALGORITMO CARACTERE . VAR declaracaoType INICIO blocoType FIMALGORITMO
    VAR             shift and go to state 4


state 4

    (1) initial -> ALGORITMO CARACTERE VAR . declaracaoType INICIO blocoType FIMALGORITMO
    (4) declaracaoType -> .
    (5) declaracaoType -> . declaracaoTypeAux
    (6) declaracaoTypeAux -> . declaracao
    (7) declaracaoTypeAux -> . declaracao declaracaoTypeAux
    (8) declaracao -> . vartype : LOGICO
    (9) declaracao -> . vartype : CARACTERE
    (10) declaracao -> . vartype : REAL
    (11) declaracao -> . vartype : INTEIRO
    (12) vartype -> . ID , vartype
    (13) vartype -> . ID
    INICIO          reduce using rule 4 (declaracaoType -> .)
    ID              shift and go to state 9

    declaracaoType                 shift and go to state 5
    declaracaoTypeAux              shift and go to state 6
    declaracao                     shift and go to state 7
    vartype                        shift and go to state 8

state 5

    (1) initial -> ALGORITMO CARACTERE VAR declaracaoType . INICIO blocoType FIMALGORITMO
    INICIO          shift and go to state 10


state 6

    (5) declaracaoType -> declaracaoTypeAux .
    INICIO          reduce using rule 5 (declaracaoType -> declaracaoTypeAux .)


state 7

    (6) declaracaoTypeAux -> declaracao .
    (7) declaracaoTypeAux -> declaracao . declaracaoTypeAux
    (6) declaracaoTypeAux -> . declaracao
    (7) declaracaoTypeAux -> . declaracao declaracaoTypeAux
    (8) declaracao -> . vartype : LOGICO
    (9) declaracao -> . vartype : CARACTERE
    (10) declaracao -> . vartype : REAL
    (11) declaracao -> . vartype : INTEIRO
    (12) vartype -> . ID , vartype
    (13) vartype -> . ID
    INICIO          reduce using rule 6 (declaracaoTypeAux -> declaracao .)
    ID              shift and go to state 9

    declaracao                     shift and go to state 7
    declaracaoTypeAux              shift and go to state 11
    vartype                        shift and go to state 8

state 8

    (8) declaracao -> vartype . : LOGICO
    (9) declaracao -> vartype . : CARACTERE
    (10) declaracao -> vartype . : REAL
    (11) declaracao -> vartype . : INTEIRO
    :               shift and go to state 12


state 9

    (12) vartype -> ID . , vartype
    (13) vartype -> ID .
    ,               shift and go to state 13
    :               reduce using rule 13 (vartype -> ID .)


state 10

    (1) initial -> ALGORITMO CARACTERE VAR declaracaoType INICIO . blocoType FIMALGORITMO
    (2) blocoType -> .
    (3) blocoType -> . bloco
    (14) bloco -> . cmd bloco
    (15) bloco -> . cmd
    (16) cmd -> . cmdRepeticao
    (17) cmd -> . LIMPATELA
    (18) cmd -> . cmdCondicao
    (19) cmd -> . cmdleitura
    (20) cmd -> . cmdescrita
    (21) cmd -> . cmdattrib
    (22) cmdRepeticao -> . ENQUANTO expressaoRelacional FACA bloco FIMENQUANTO
    (24) cmdCondicao -> . SE expressaoRelacional ENTAO bloco SENAO bloco FIMSE
    (25) cmdCondicao -> . SE expressaoRelacional ENTAO bloco FIMSE
    (23) cmdleitura -> . LEIA ( ID )
    (48) cmdescrita -> . ESCREVAL ( )
    (49) cmdescrita -> . ESCREVAL ( typeArgsEscrita )
    (50) cmdescrita -> . ESCREVA ( )
    (51) cmdescrita -> . ESCREVA ( typeArgsEscrita )
    (42) cmdattrib -> . ID ASSIGN ( typeArgs )
    (43) cmdattrib -> . ID ASSIGN typeArgs
    (44) cmdattrib -> . ID ASSIGN expr
    FIMALGORITMO    reduce using rule 2 (blocoType -> .)
    LIMPATELA       shift and go to state 18
    ENQUANTO        shift and go to state 23
    SE              shift and go to state 24
    LEIA            shift and go to state 25
    ESCREVAL        shift and go to state 27
    ESCREVA         shift and go to state 28
    ID              shift and go to state 26

    blocoType                      shift and go to state 14
    bloco                          shift and go to state 15
    cmd                            shift and go to state 16
    cmdRepeticao                   shift and go to state 17
    cmdCondicao                    shift and go to state 19
    cmdleitura                     shift and go to state 20
    cmdescrita                     shift and go to state 21
    cmdattrib                      shift and go to state 22

state 11

    (7) declaracaoTypeAux -> declaracao declaracaoTypeAux .
    INICIO          reduce using rule 7 (declaracaoTypeAux -> declaracao declaracaoTypeAux .)


state 12

    (8) declaracao -> vartype : . LOGICO
    (9) declaracao -> vartype : . CARACTERE
    (10) declaracao -> vartype : . REAL
    (11) declaracao -> vartype : . INTEIRO
    LOGICO          shift and go to state 29
    CARACTERE       shift and go to state 30
    REAL            shift and go to state 31
    INTEIRO         shift and go to state 32


state 13

    (12) vartype -> ID , . vartype
    (12) vartype -> . ID , vartype
    (13) vartype -> . ID
    ID              shift and go to state 9

    vartype                        shift and go to state 33

state 14

    (1) initial -> ALGORITMO CARACTERE VAR declaracaoType INICIO blocoType . FIMALGORITMO
    FIMALGORITMO    shift and go to state 34


state 15

    (3) blocoType -> bloco .
    FIMALGORITMO    reduce using rule 3 (blocoType -> bloco .)


state 16

    (14) bloco -> cmd . bloco
    (15) bloco -> cmd .
    (14) bloco -> . cmd bloco
    (15) bloco -> . cmd
    (16) cmd -> . cmdRepeticao
    (17) cmd -> . LIMPATELA
    (18) cmd -> . cmdCondicao
    (19) cmd -> . cmdleitura
    (20) cmd -> . cmdescrita
    (21) cmd -> . cmdattrib
    (22) cmdRepeticao -> . ENQUANTO expressaoRelacional FACA bloco FIMENQUANTO
    (24) cmdCondicao -> . SE expressaoRelacional ENTAO bloco SENAO bloco FIMSE
    (25) cmdCondicao -> . SE expressaoRelacional ENTAO bloco FIMSE
    (23) cmdleitura -> . LEIA ( ID )
    (48) cmdescrita -> . ESCREVAL ( )
    (49) cmdescrita -> . ESCREVAL ( typeArgsEscrita )
    (50) cmdescrita -> . ESCREVA ( )
    (51) cmdescrita -> . ESCREVA ( typeArgsEscrita )
    (42) cmdattrib -> . ID ASSIGN ( typeArgs )
    (43) cmdattrib -> . ID ASSIGN typeArgs
    (44) cmdattrib -> . ID ASSIGN expr
    FIMALGORITMO    reduce using rule 15 (bloco -> cmd .)
    FIMENQUANTO     reduce using rule 15 (bloco -> cmd .)
    SENAO           reduce using rule 15 (bloco -> cmd .)
    FIMSE           reduce using rule 15 (bloco -> cmd .)
    LIMPATELA       shift and go to state 18
    ENQUANTO        shift and go to state 23
    SE              shift and go to state 24
    LEIA            shift and go to state 25
    ESCREVAL        shift and go to state 27
    ESCREVA         shift and go to state 28
    ID              shift and go to state 26

    cmd                            shift and go to state 16
    bloco                          shift and go to state 35
    cmdRepeticao                   shift and go to state 17
    cmdCondicao                    shift and go to state 19
    cmdleitura                     shift and go to state 20
    cmdescrita                     shift and go to state 21
    cmdattrib                      shift and go to state 22

state 17

    (16) cmd -> cmdRepeticao .
    LIMPATELA       reduce using rule 16 (cmd -> cmdRepeticao .)
    ENQUANTO        reduce using rule 16 (cmd -> cmdRepeticao .)
    SE              reduce using rule 16 (cmd -> cmdRepeticao .)
    LEIA            reduce using rule 16 (cmd -> cmdRepeticao .)
    ESCREVAL        reduce using rule 16 (cmd -> cmdRepeticao .)
    ESCREVA         reduce using rule 16 (cmd -> cmdRepeticao .)
    ID              reduce using rule 16 (cmd -> cmdRepeticao .)
    FIMALGORITMO    reduce using rule 16 (cmd -> cmdRepeticao .)
    FIMENQUANTO     reduce using rule 16 (cmd -> cmdRepeticao .)
    SENAO           reduce using rule 16 (cmd -> cmdRepeticao .)
    FIMSE           reduce using rule 16 (cmd -> cmdRepeticao .)


state 18

    (17) cmd -> LIMPATELA .
    LIMPATELA       reduce using rule 17 (cmd -> LIMPATELA .)
    ENQUANTO        reduce using rule 17 (cmd -> LIMPATELA .)
    SE              reduce using rule 17 (cmd -> LIMPATELA .)
    LEIA            reduce using rule 17 (cmd -> LIMPATELA .)
    ESCREVAL        reduce using rule 17 (cmd -> LIMPATELA .)
    ESCREVA         reduce using rule 17 (cmd -> LIMPATELA .)
    ID              reduce using rule 17 (cmd -> LIMPATELA .)
    FIMALGORITMO    reduce using rule 17 (cmd -> LIMPATELA .)
    FIMENQUANTO     reduce using rule 17 (cmd -> LIMPATELA .)
    SENAO           reduce using rule 17 (cmd -> LIMPATELA .)
    FIMSE           reduce using rule 17 (cmd -> LIMPATELA .)


state 19

    (18) cmd -> cmdCondicao .
    LIMPATELA       reduce using rule 18 (cmd -> cmdCondicao .)
    ENQUANTO        reduce using rule 18 (cmd -> cmdCondicao .)
    SE              reduce using rule 18 (cmd -> cmdCondicao .)
    LEIA            reduce using rule 18 (cmd -> cmdCondicao .)
    ESCREVAL        reduce using rule 18 (cmd -> cmdCondicao .)
    ESCREVA         reduce using rule 18 (cmd -> cmdCondicao .)
    ID              reduce using rule 18 (cmd -> cmdCondicao .)
    FIMALGORITMO    reduce using rule 18 (cmd -> cmdCondicao .)
    FIMENQUANTO     reduce using rule 18 (cmd -> cmdCondicao .)
    SENAO           reduce using rule 18 (cmd -> cmdCondicao .)
    FIMSE           reduce using rule 18 (cmd -> cmdCondicao .)


state 20

    (19) cmd -> cmdleitura .
    LIMPATELA       reduce using rule 19 (cmd -> cmdleitura .)
    ENQUANTO        reduce using rule 19 (cmd -> cmdleitura .)
    SE              reduce using rule 19 (cmd -> cmdleitura .)
    LEIA            reduce using rule 19 (cmd -> cmdleitura .)
    ESCREVAL        reduce using rule 19 (cmd -> cmdleitura .)
    ESCREVA         reduce using rule 19 (cmd -> cmdleitura .)
    ID              reduce using rule 19 (cmd -> cmdleitura .)
    FIMALGORITMO    reduce using rule 19 (cmd -> cmdleitura .)
    FIMENQUANTO     reduce using rule 19 (cmd -> cmdleitura .)
    SENAO           reduce using rule 19 (cmd -> cmdleitura .)
    FIMSE           reduce using rule 19 (cmd -> cmdleitura .)


state 21

    (20) cmd -> cmdescrita .
    LIMPATELA       reduce using rule 20 (cmd -> cmdescrita .)
    ENQUANTO        reduce using rule 20 (cmd -> cmdescrita .)
    SE              reduce using rule 20 (cmd -> cmdescrita .)
    LEIA            reduce using rule 20 (cmd -> cmdescrita .)
    ESCREVAL        reduce using rule 20 (cmd -> cmdescrita .)
    ESCREVA         reduce using rule 20 (cmd -> cmdescrita .)
    ID              reduce using rule 20 (cmd -> cmdescrita .)
    FIMALGORITMO    reduce using rule 20 (cmd -> cmdescrita .)
    FIMENQUANTO     reduce using rule 20 (cmd -> cmdescrita .)
    SENAO           reduce using rule 20 (cmd -> cmdescrita .)
    FIMSE           reduce using rule 20 (cmd -> cmdescrita .)


state 22

    (21) cmd -> cmdattrib .
    LIMPATELA       reduce using rule 21 (cmd -> cmdattrib .)
    ENQUANTO        reduce using rule 21 (cmd -> cmdattrib .)
    SE              reduce using rule 21 (cmd -> cmdattrib .)
    LEIA            reduce using rule 21 (cmd -> cmdattrib .)
    ESCREVAL        reduce using rule 21 (cmd -> cmdattrib .)
    ESCREVA         reduce using rule 21 (cmd -> cmdattrib .)
    ID              reduce using rule 21 (cmd -> cmdattrib .)
    FIMALGORITMO    reduce using rule 21 (cmd -> cmdattrib .)
    FIMENQUANTO     reduce using rule 21 (cmd -> cmdattrib .)
    SENAO           reduce using rule 21 (cmd -> cmdattrib .)
    FIMSE           reduce using rule 21 (cmd -> cmdattrib .)


state 23

    (22) cmdRepeticao -> ENQUANTO . expressaoRelacional FACA bloco FIMENQUANTO
    (26) expressaoRelacional -> . termoRelacional
    (27) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (28) termoRelacional -> . ( expressaoRelacional )
    (29) termoRelacional -> . FALSO
    (30) termoRelacional -> . VERDADEIRO
    (31) termoRelacional -> . NAO termoRelacional
    (32) termoRelacional -> . expr OP_REL expr
    (56) expr -> . ID
    (57) expr -> . REAL
    (58) expr -> . INTEIRO
    (59) expr -> . - expr
    (60) expr -> . expr ^ expr
    (61) expr -> . expr MOD expr
    (62) expr -> . expr % expr
    (63) expr -> . expr \ expr
    (64) expr -> . expr / expr
    (65) expr -> . expr * expr
    (66) expr -> . expr - expr
    (67) expr -> . expr + expr
    (68) expr -> . ( expr )
    (               shift and go to state 38
    FALSO           shift and go to state 39
    VERDADEIRO      shift and go to state 40
    NAO             shift and go to state 41
    ID              shift and go to state 43
    REAL            shift and go to state 44
    INTEIRO         shift and go to state 45
    -               shift and go to state 46

    expressaoRelacional            shift and go to state 36
    termoRelacional                shift and go to state 37
    expr                           shift and go to state 42

state 24

    (24) cmdCondicao -> SE . expressaoRelacional ENTAO bloco SENAO bloco FIMSE
    (25) cmdCondicao -> SE . expressaoRelacional ENTAO bloco FIMSE
    (26) expressaoRelacional -> . termoRelacional
    (27) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (28) termoRelacional -> . ( expressaoRelacional )
    (29) termoRelacional -> . FALSO
    (30) termoRelacional -> . VERDADEIRO
    (31) termoRelacional -> . NAO termoRelacional
    (32) termoRelacional -> . expr OP_REL expr
    (56) expr -> . ID
    (57) expr -> . REAL
    (58) expr -> . INTEIRO
    (59) expr -> . - expr
    (60) expr -> . expr ^ expr
    (61) expr -> . expr MOD expr
    (62) expr -> . expr % expr
    (63) expr -> . expr \ expr
    (64) expr -> . expr / expr
    (65) expr -> . expr * expr
    (66) expr -> . expr - expr
    (67) expr -> . expr + expr
    (68) expr -> . ( expr )
    (               shift and go to state 38
    FALSO           shift and go to state 39
    VERDADEIRO      shift and go to state 40
    NAO             shift and go to state 41
    ID              shift and go to state 43
    REAL            shift and go to state 44
    INTEIRO         shift and go to state 45
    -               shift and go to state 46

    expressaoRelacional            shift and go to state 47
    termoRelacional                shift and go to state 37
    expr                           shift and go to state 42

state 25

    (23) cmdleitura -> LEIA . ( ID )
    (               shift and go to state 48


state 26

    (42) cmdattrib -> ID . ASSIGN ( typeArgs )
    (43) cmdattrib -> ID . ASSIGN typeArgs
    (44) cmdattrib -> ID . ASSIGN expr
    ASSIGN          shift and go to state 49


state 27

    (48) cmdescrita -> ESCREVAL . ( )
    (49) cmdescrita -> ESCREVAL . ( typeArgsEscrita )
    (               shift and go to state 50


state 28

    (50) cmdescrita -> ESCREVA . ( )
    (51) cmdescrita -> ESCREVA . ( typeArgsEscrita )
    (               shift and go to state 51


state 29

    (8) declaracao -> vartype : LOGICO .
    ID              reduce using rule 8 (declaracao -> vartype : LOGICO .)
    INICIO          reduce using rule 8 (declaracao -> vartype : LOGICO .)


state 30

    (9) declaracao -> vartype : CARACTERE .
    ID              reduce using rule 9 (declaracao -> vartype : CARACTERE .)
    INICIO          reduce using rule 9 (declaracao -> vartype : CARACTERE .)


state 31

    (10) declaracao -> vartype : REAL .
    ID              reduce using rule 10 (declaracao -> vartype : REAL .)
    INICIO          reduce using rule 10 (declaracao -> vartype : REAL .)


state 32

    (11) declaracao -> vartype : INTEIRO .
    ID              reduce using rule 11 (declaracao -> vartype : INTEIRO .)
    INICIO          reduce using rule 11 (declaracao -> vartype : INTEIRO .)


state 33

    (12) vartype -> ID , vartype .
    :               reduce using rule 12 (vartype -> ID , vartype .)


state 34

    (1) initial -> ALGORITMO CARACTERE VAR declaracaoType INICIO blocoType FIMALGORITMO .
    $end            reduce using rule 1 (initial -> ALGORITMO CARACTERE VAR declaracaoType INICIO blocoType FIMALGORITMO .)


state 35

    (14) bloco -> cmd bloco .
    FIMALGORITMO    reduce using rule 14 (bloco -> cmd bloco .)
    FIMENQUANTO     reduce using rule 14 (bloco -> cmd bloco .)
    SENAO           reduce using rule 14 (bloco -> cmd bloco .)
    FIMSE           reduce using rule 14 (bloco -> cmd bloco .)


state 36

    (22) cmdRepeticao -> ENQUANTO expressaoRelacional . FACA bloco FIMENQUANTO
    (27) expressaoRelacional -> expressaoRelacional . OP_BOOL termoRelacional
    (33) OP_BOOL -> . XOU
    (34) OP_BOOL -> . OU
    (35) OP_BOOL -> . E
    FACA            shift and go to state 52
    XOU             shift and go to state 54
    OU              shift and go to state 55
    E               shift and go to state 56

    OP_BOOL                        shift and go to state 53

state 37

    (26) expressaoRelacional -> termoRelacional .
    FACA            reduce using rule 26 (expressaoRelacional -> termoRelacional .)
    XOU             reduce using rule 26 (expressaoRelacional -> termoRelacional .)
    OU              reduce using rule 26 (expressaoRelacional -> termoRelacional .)
    E               reduce using rule 26 (expressaoRelacional -> termoRelacional .)
    ENTAO           reduce using rule 26 (expressaoRelacional -> termoRelacional .)
    )               reduce using rule 26 (expressaoRelacional -> termoRelacional .)


state 38

    (28) termoRelacional -> ( . expressaoRelacional )
    (68) expr -> ( . expr )
    (26) expressaoRelacional -> . termoRelacional
    (27) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (56) expr -> . ID
    (57) expr -> . REAL
    (58) expr -> . INTEIRO
    (59) expr -> . - expr
    (60) expr -> . expr ^ expr
    (61) expr -> . expr MOD expr
    (62) expr -> . expr % expr
    (63) expr -> . expr \ expr
    (64) expr -> . expr / expr
    (65) expr -> . expr * expr
    (66) expr -> . expr - expr
    (67) expr -> . expr + expr
    (68) expr -> . ( expr )
    (28) termoRelacional -> . ( expressaoRelacional )
    (29) termoRelacional -> . FALSO
    (30) termoRelacional -> . VERDADEIRO
    (31) termoRelacional -> . NAO termoRelacional
    (32) termoRelacional -> . expr OP_REL expr
    ID              shift and go to state 43
    REAL            shift and go to state 44
    INTEIRO         shift and go to state 45
    -               shift and go to state 46
    (               shift and go to state 57
    FALSO           shift and go to state 39
    VERDADEIRO      shift and go to state 40
    NAO             shift and go to state 41

    expressaoRelacional            shift and go to state 58
    expr                           shift and go to state 59
    termoRelacional                shift and go to state 37

state 39

    (29) termoRelacional -> FALSO .
    FACA            reduce using rule 29 (termoRelacional -> FALSO .)
    XOU             reduce using rule 29 (termoRelacional -> FALSO .)
    OU              reduce using rule 29 (termoRelacional -> FALSO .)
    E               reduce using rule 29 (termoRelacional -> FALSO .)
    ENTAO           reduce using rule 29 (termoRelacional -> FALSO .)
    )               reduce using rule 29 (termoRelacional -> FALSO .)


state 40

    (30) termoRelacional -> VERDADEIRO .
    FACA            reduce using rule 30 (termoRelacional -> VERDADEIRO .)
    XOU             reduce using rule 30 (termoRelacional -> VERDADEIRO .)
    OU              reduce using rule 30 (termoRelacional -> VERDADEIRO .)
    E               reduce using rule 30 (termoRelacional -> VERDADEIRO .)
    ENTAO           reduce using rule 30 (termoRelacional -> VERDADEIRO .)
    )               reduce using rule 30 (termoRelacional -> VERDADEIRO .)


state 41

    (31) termoRelacional -> NAO . termoRelacional
    (28) termoRelacional -> . ( expressaoRelacional )
    (29) termoRelacional -> . FALSO
    (30) termoRelacional -> . VERDADEIRO
    (31) termoRelacional -> . NAO termoRelacional
    (32) termoRelacional -> . expr OP_REL expr
    (56) expr -> . ID
    (57) expr -> . REAL
    (58) expr -> . INTEIRO
    (59) expr -> . - expr
    (60) expr -> . expr ^ expr
    (61) expr -> . expr MOD expr
    (62) expr -> . expr % expr
    (63) expr -> . expr \ expr
    (64) expr -> . expr / expr
    (65) expr -> . expr * expr
    (66) expr -> . expr - expr
    (67) expr -> . expr + expr
    (68) expr -> . ( expr )
    (               shift and go to state 38
    FALSO           shift and go to state 39
    VERDADEIRO      shift and go to state 40
    NAO             shift and go to state 41
    ID              shift and go to state 43
    REAL            shift and go to state 44
    INTEIRO         shift and go to state 45
    -               shift and go to state 46

    termoRelacional                shift and go to state 60
    expr                           shift and go to state 42

state 42

    (32) termoRelacional -> expr . OP_REL expr
    (60) expr -> expr . ^ expr
    (61) expr -> expr . MOD expr
    (62) expr -> expr . % expr
    (63) expr -> expr . \ expr
    (64) expr -> expr . / expr
    (65) expr -> expr . * expr
    (66) expr -> expr . - expr
    (67) expr -> expr . + expr
    (36) OP_REL -> . EQ
    (37) OP_REL -> . GT
    (38) OP_REL -> . GE
    (39) OP_REL -> . LT
    (40) OP_REL -> . LE
    (41) OP_REL -> . NE
    ^               shift and go to state 62
    MOD             shift and go to state 63
    %               shift and go to state 64
    \               shift and go to state 65
    /               shift and go to state 66
    *               shift and go to state 67
    -               shift and go to state 68
    +               shift and go to state 69
    EQ              shift and go to state 70
    GT              shift and go to state 71
    GE              shift and go to state 72
    LT              shift and go to state 73
    LE              shift and go to state 74
    NE              shift and go to state 75

    OP_REL                         shift and go to state 61

state 43

    (56) expr -> ID .
    ^               reduce using rule 56 (expr -> ID .)
    MOD             reduce using rule 56 (expr -> ID .)
    %               reduce using rule 56 (expr -> ID .)
    \               reduce using rule 56 (expr -> ID .)
    /               reduce using rule 56 (expr -> ID .)
    *               reduce using rule 56 (expr -> ID .)
    -               reduce using rule 56 (expr -> ID .)
    +               reduce using rule 56 (expr -> ID .)
    EQ              reduce using rule 56 (expr -> ID .)
    GT              reduce using rule 56 (expr -> ID .)
    GE              reduce using rule 56 (expr -> ID .)
    LT              reduce using rule 56 (expr -> ID .)
    LE              reduce using rule 56 (expr -> ID .)
    NE              reduce using rule 56 (expr -> ID .)
    )               reduce using rule 56 (expr -> ID .)
    LIMPATELA       reduce using rule 56 (expr -> ID .)
    ENQUANTO        reduce using rule 56 (expr -> ID .)
    SE              reduce using rule 56 (expr -> ID .)
    LEIA            reduce using rule 56 (expr -> ID .)
    ESCREVAL        reduce using rule 56 (expr -> ID .)
    ESCREVA         reduce using rule 56 (expr -> ID .)
    ID              reduce using rule 56 (expr -> ID .)
    FIMALGORITMO    reduce using rule 56 (expr -> ID .)
    FIMENQUANTO     reduce using rule 56 (expr -> ID .)
    SENAO           reduce using rule 56 (expr -> ID .)
    FIMSE           reduce using rule 56 (expr -> ID .)
    ,               reduce using rule 56 (expr -> ID .)
    FACA            reduce using rule 56 (expr -> ID .)
    XOU             reduce using rule 56 (expr -> ID .)
    OU              reduce using rule 56 (expr -> ID .)
    E               reduce using rule 56 (expr -> ID .)
    ENTAO           reduce using rule 56 (expr -> ID .)


state 44

    (57) expr -> REAL .
    ^               reduce using rule 57 (expr -> REAL .)
    MOD             reduce using rule 57 (expr -> REAL .)
    %               reduce using rule 57 (expr -> REAL .)
    \               reduce using rule 57 (expr -> REAL .)
    /               reduce using rule 57 (expr -> REAL .)
    *               reduce using rule 57 (expr -> REAL .)
    -               reduce using rule 57 (expr -> REAL .)
    +               reduce using rule 57 (expr -> REAL .)
    EQ              reduce using rule 57 (expr -> REAL .)
    GT              reduce using rule 57 (expr -> REAL .)
    GE              reduce using rule 57 (expr -> REAL .)
    LT              reduce using rule 57 (expr -> REAL .)
    LE              reduce using rule 57 (expr -> REAL .)
    NE              reduce using rule 57 (expr -> REAL .)
    )               reduce using rule 57 (expr -> REAL .)
    LIMPATELA       reduce using rule 57 (expr -> REAL .)
    ENQUANTO        reduce using rule 57 (expr -> REAL .)
    SE              reduce using rule 57 (expr -> REAL .)
    LEIA            reduce using rule 57 (expr -> REAL .)
    ESCREVAL        reduce using rule 57 (expr -> REAL .)
    ESCREVA         reduce using rule 57 (expr -> REAL .)
    ID              reduce using rule 57 (expr -> REAL .)
    FIMALGORITMO    reduce using rule 57 (expr -> REAL .)
    FIMENQUANTO     reduce using rule 57 (expr -> REAL .)
    SENAO           reduce using rule 57 (expr -> REAL .)
    FIMSE           reduce using rule 57 (expr -> REAL .)
    ,               reduce using rule 57 (expr -> REAL .)
    FACA            reduce using rule 57 (expr -> REAL .)
    XOU             reduce using rule 57 (expr -> REAL .)
    OU              reduce using rule 57 (expr -> REAL .)
    E               reduce using rule 57 (expr -> REAL .)
    ENTAO           reduce using rule 57 (expr -> REAL .)


state 45
